@@ -32,7 +32,7 @@ $chunks[1]->fromArray(array(
     'id' => 1,
     'name' => 'lgnLoginTpl',
     'description' => '',
-    'snippet' => file_get_contents($sources['source_core'].'/chunks/lgnlogintpl.chunk.tpl'),
+    'snippet' => file_get_contents($sources['source_core'].'/elements/chunks/lgnlogintpl.chunk.tpl'),
     'properties' => '',
 ),'',true,true);
 
@@ -41,7 +41,7 @@ $chunks[2]->fromArray(array(
     'id' => 2,
     'name' => 'lgnLogoutTpl',
     'description' => '',
-    'snippet' => file_get_contents($sources['source_core'].'/chunks/lgnlogouttpl.chunk.tpl'),
+    'snippet' => file_get_contents($sources['source_core'].'/elements/chunks/lgnlogouttpl.chunk.tpl'),
     'properties' => '',
 ),'',true,true);
 
@@ -50,7 +50,7 @@ $chunks[3]->fromArray(array(
     'id' => 3,
     'name' => 'lgnErrTpl',
     'description' => '',
-    'snippet' => file_get_contents($sources['source_core'].'/chunks/lgnerrtpl.chunk.tpl'),
+    'snippet' => file_get_contents($sources['source_core'].'/elements/chunks/lgnerrtpl.chunk.tpl'),
     'properties' => '',
 ),'',true,true);
 
@@ -59,7 +59,7 @@ $chunks[4]->fromArray(array(
     'id' => 4,
     'name' => 'lgnForgotPassEmail',
     'description' => '',
-    'snippet' => file_get_contents($sources['source_core'].'/chunks/lgnforgotpassemail.chunk.tpl'),
+    'snippet' => file_get_contents($sources['source_core'].'/elements/chunks/lgnforgotpassemail.chunk.tpl'),
     'properties' => '',
 ),'',true,true);
 
@@ -68,7 +68,7 @@ $chunks[5]->fromArray(array(
     'id' => 5,
     'name' => 'lgnForgotPassSentTpl',
     'description' => '',
-    'snippet' => file_get_contents($sources['source_core'].'/chunks/lgnforgotpasssenttpl.chunk.tpl'),
+    'snippet' => file_get_contents($sources['source_core'].'/elements/chunks/lgnforgotpasssenttpl.chunk.tpl'),
     'properties' => '',
 ),'',true,true);
 
@@ -77,7 +77,7 @@ $chunks[6]->fromArray(array(
     'id' => 6,
     'name' => 'lgnForgotPassTpl',
     'description' => '',
-    'snippet' => file_get_contents($sources['source_core'].'/chunks/lgnforgotpasstpl.chunk.tpl'),
+    'snippet' => file_get_contents($sources['source_core'].'/elements/chunks/lgnforgotpasstpl.chunk.tpl'),
     'properties' => '',
 ),'',true,true);
 
@@ -86,7 +86,7 @@ $chunks[7]->fromArray(array(
     'id' => 7,
     'name' => 'lgnResetPassTpl',
     'description' => '',
-    'snippet' => file_get_contents($sources['source_core'].'/chunks/lgnresetpasstpl.chunk.tpl'),
+    'snippet' => file_get_contents($sources['source_core'].'/elements/chunks/lgnresetpasstpl.chunk.tpl'),
     'properties' => '',
 ),'',true,true);
 
@@ -95,7 +95,7 @@ $chunks[8]->fromArray(array(
     'id' => 8,
     'name' => 'lgnRegisterForm',
     'description' => '',
-    'snippet' => file_get_contents($sources['source_core'].'/chunks/lgnregisterformtpl.chunk.tpl'),
+    'snippet' => file_get_contents($sources['source_core'].'/elements/chunks/lgnregisterformtpl.chunk.tpl'),
     'properties' => '',
 ),'',true,true);
 
@@ -104,7 +104,7 @@ $chunks[9]->fromArray(array(
     'id' => 9,
     'name' => 'lgnActivateEmailTpl',
     'description' => '',
-    'snippet' => file_get_contents($sources['source_core'].'/chunks/lgnactivateemailtpl.chunk.tpl'),
+    'snippet' => file_get_contents($sources['source_core'].'/elements/chunks/lgnactivateemailtpl.chunk.tpl'),
     'properties' => '',
 ),'',true,true);
 
