@@ -18,7 +18,7 @@ $snippets[0]->fromArray(array(
     'id' => 0,
     'name' => 'Login',
     'description' => 'Displays a login and logout form.',
-    'snippet' => getSnippetContent($sources['source_core'].'/login.snippet.php'),
+    'snippet' => getSnippetContent($sources['source_core'].'/elements/snippets/login.snippet.php'),
 ),'',true,true);
 $properties = include $sources['data'].'properties/properties.login.php';
 $snippets[0]->setProperties($properties);
@@ -30,7 +30,7 @@ $snippets[1]->fromArray(array(
     'id' => 1,
     'name' => 'ForgotPassword',
     'description' => 'Displays a forgot password form.',
-    'snippet' => getSnippetContent($sources['source_core'].'/forgotpassword.snippet.php'),
+    'snippet' => getSnippetContent($sources['source_core'].'/elements/snippets/forgotpassword.snippet.php'),
 ),'',true,true);
 $properties = include $sources['data'].'properties/properties.forgotpassword.php';
 $snippets[1]->setProperties($properties);
@@ -42,7 +42,7 @@ $snippets[2]->fromArray(array(
     'id' => 2,
     'name' => 'ResetPassword',
     'description' => 'Resets a password from a confirmation email.',
-    'snippet' => getSnippetContent($sources['source_core'].'/resetpassword.snippet.php'),
+    'snippet' => getSnippetContent($sources['source_core'].'/elements/snippets/resetpassword.snippet.php'),
 ),'',true,true);
 $properties = include $sources['data'].'properties/properties.resetpassword.php';
 $snippets[2]->setProperties($properties);
@@ -53,7 +53,7 @@ $snippets[3]->fromArray(array(
     'id' => 3,
     'name' => 'Register',
     'description' => 'Handles forms for registering users on the front-end.',
-    'snippet' => getSnippetContent($sources['source_core'].'/register.snippet.php'),
+    'snippet' => getSnippetContent($sources['source_core'].'/elements/snippets/register.snippet.php'),
 ),'',true,true);
 $properties = include $sources['data'].'properties/properties.register.php';
 $snippets[3]->setProperties($properties);
@@ -64,7 +64,7 @@ $snippets[4]->fromArray(array(
     'id' => 4,
     'name' => 'ConfirmRegister',
     'description' => 'Handles activation of registered user.',
-    'snippet' => getSnippetContent($sources['source_core'].'/confirmregister.snippet.php'),
+    'snippet' => getSnippetContent($sources['source_core'].'/elements/snippets/confirmregister.snippet.php'),
 ),'',true,true);
 $properties = include $sources['data'].'properties/properties.confirmregister.php';
 $snippets[4]->setProperties($properties);
@@ -75,7 +75,7 @@ $snippets[5]->fromArray(array(
     'id' => 5,
     'name' => 'UpdateProfile',
     'description' => 'Allows front-end updating of a users own profile.',
-    'snippet' => getSnippetContent($sources['source_core'].'/updateprofile.snippet.php'),
+    'snippet' => getSnippetContent($sources['source_core'].'/elements/snippets/updateprofile.snippet.php'),
 ),'',true,true);
 $properties = include $sources['data'].'properties/properties.updateprofile.php';
 $snippets[5]->setProperties($properties);
