@@ -2,6 +2,8 @@ Changelog file for Login component.
 
 Login 1.0 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- Ensure username,password and email are always passed to register snippet to prevent blank logins
+- Consolidated elements into own dir
 - Added extra checks and fixes to lgnValidator class
 - Added UpdateProfile snippet to enable updating of profile from front-end
 - [#ADDON-129] Added name to default Register form
